# bvhCollisionDetection

./: CMakeLists.txt
dependencies/imgui/: get_imgui.cmake
include/: AABB.h  BVH.h  BVHNodes.h  Camera.h  CollisionHandler.h  ComputeShader.h  ConstantSpeedSimulator.h  Entity.h  EntityManager.h  EventManager.h  Events.h  GLBuffer.h  Game.h  Mesh.h  MeshLoader.h  MeshManager.h  RadixSort.h  Scene.h  Shader.h  ShaderManager.h  Window.h
src/: Game.cpp  Window.cpp  main.cpp
src/Core/: BVH.cpp  Camera.cpp  ComputeShader.cpp  Mesh.cpp  MeshLoader.cpp  RadixSort.cpp  Scene.cpp  Shader.cpp
src/Core/Managers/: EntityManager.cpp  MeshManager.cpp
src/Entities/: AABB.cpp  Entity.cpp
src/Shaders/: AABB.frag  AABB.vert  Basic.frag  Basic.vert  Vector.vert
src/Shaders/Compute/: BVHCollisionHandler.comp  Naive.comp  computeBounds.comp  computeInternalNodes.comp  computeMortonCodes.comp  sortLeafNodes.comp
src/Shaders/Compute/RadixSort/: applyOffsets.comp  buildBuffers.comp  computeHistogram.comp  copyElements.comp
src/Shaders/Compute/RadixSort/PrefixSum/: prefixSum.comp  prefixSumAux.comp  uniformIncrement.comp
src/Shaders/Compute/RadixSort/PrefixSum2D/: prefixSum.comp  prefixSumBlock.comp  uniformIncrement.comp
src/Shaders/Compute/RadixSort/PrefixSum4D/: prefixSum.comp  prefixSumBCF.comp  prefixSumBlock.comp  prefixSumBlockBCF.comp  uniformIncrement.comp
src/Shaders/include/: BVHNodes.glsl
src/Systems/: CollisionHandler.cpp  ConstantSpeedSimulator.cpp
